# fengine

./: .editorconfig  .envrc  .gitignore  flake.nix  meson.build
include/: buf.h
src/: buf.c  main.c
